@@ -376,6 +376,7 @@ module API
       expose :user_oauth_applications
       expose :after_sign_out_path
       expose :container_registry_token_expire_delay
+      expose :repository_storage
     end
 
     class Release < Grape::Entity
