@@ -37,6 +37,7 @@ v 8.9.0 (unreleased)
   - Redesign navigation for project pages
   - Fix images in sign-up confirmation email
   - Refactor repository paths handling to allow multiple git mount points
+  - Add Application Setting to configure default Repository Path for new projects
   - Added shortcut 'y' for copying a files content hash URL #14470
   - Fix groups API to list only user's accessible projects
   - Fix horizontal scrollbar for long commit message.
